Most Important API Changes
--------------------------

Those are mentioned here as are not backward compatible.
I want the API to be stable and consistent in the next release and later,
so I do all the big changes now (I would have to do them at some time anyway).

2006-08-31

	Interface API for better externalisation of various components. First
	introduced to the Client classes -- one may create different classes
	to handle different stanza types and namespaces, annotate them with
	interfaces implemented (IFeaturesProvider, IPresenceHandlersProvider,
	IMessageHandlersProvider or IIqHandlersProvider) and list their
	instances in a Client object's interface_providers attribute.

	See the echocomponent.py example to see how to use that.

2006-08-26
	
	Exception handling improvements, part one.

	All PyXMPP-specific exceptions moved to pyxmpp.exceptions module. Some exceptions
	have been removed (those which were used where some standard exception, like ValueError,
	would be a better choice), the most important omission is StanzaError exception.

	ProtocolError exception with some derivatives added -- these are raised when 
	an error is detected in a stanza (received) processed. These exceptions
	will be handled internally by PyXMPP some day (automatically
	<bad-request/> or similar XMPP error will be raised).

2006-08-26

	CachedPropertyObject class removed and its usage in pyxmpp.jabber.disco
	Now all the DiscoItem/DiscoInfo/DiscoItems attributes are regular properties
	calling set_*, get_* funtions on every access. 
	The old cached properties were giving no speed gain and only complicated things.

2005-10-14

	Usage of non-unicode strings in PyXMPP API is deprecated. No
	no implicit conversion is made where utf-8 string would previously be
	accepted (e.g. JID constructor). Sometimes deprecation warning will be
	raised when string is used instead of unicode.


2005-03-20

	"common_doc", "common_root", and "common_ns" can no longer be imported