@@ -39,16 +39,13 @@ Requirements
 
 For PyXMPP you will need:
 
-  - `Python <http://www.python.org/>`__. PyXMPP was designed for Python 2.4,
-    and then updated for 2.5 and 2.6. If you are lucky, 2.3 will work too.
+  - `Python <http://www.python.org/>`__. Python 2.6 required.
   - `libxml2 <http://xmlsoft.org/>`__. Recent release (>=2.6.11) with python
     bindings is required. Additionally, all development files for libxml2 (usually in
     separate libxml2-devel package) are recommended for compilation of PyXMPP for best performance.
-    PyXMPP 1.0 was tested with libxml2-2.7.2.
+    PyXMPP 1.0 was tested with libxml2-2.7.6.
   - `dnspython <http://www.dnspython.org/>`__. 
     PyXMPP 1.0 was tested with version 1.6.0.
-  - `M2Crypto <http://wiki.osafoundation.org/bin/view/Projects/MeTooCrypto>`__
-    >= 0.16 for TLS support. Tested with M2Crypto-0.19.1
 
 Installation
 ------------
